# shared-core-android

./: .gitattributes
app/: build.gradle
app/c/: CMakeLists.txt  sample
app/c/src/: core.c
app/src/main/java/com/example/myapplication/: MainActivity.kt  User.kt
app/src/main/res/layout/: activity_main.xml  user_row.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
